pxb/pxb/02-ingress-px-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: px-backup-ui
  namespace: px-central
spec:
  ingressClassName: nginx
  rules:
  - host: px-backup-ui-192-168-3-230.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: px-backup-ui
            port:
              number: 80
  - host: px-central-ui-192-168-3-230.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: px-central-ui
            port:
              number: 80
